# bc-rust

./: CONTRIBUTING.md  Cargo.toml  INTRODUCTION.md  QUALITY_AND_STYLE.md  alpha_0.1.2_release_notes.md  rustfmt.toml
cli/src/: helpers.rs  hkdf_cmd.rs  mac_cmd.rs  mldsa_cmd.rs  mlkem_cmd.rs  sha3_cmd.rs
crypto/base64/: Cargo.toml
crypto/base64/src/: lib.rs
crypto/core/: Cargo.toml
crypto/core-test-framework/: Cargo.toml
crypto/core-test-framework/src/: fixed_seed_rng.rs  hash.rs  kdf.rs  kem.rs  lib.rs  mac.rs  serializable_state.rs  signature.rs  suspendable_state.rs  symmetric_ciphers.rs
crypto/core/src/: errors.rs  key_material.rs  lib.rs  serializable_state.rs  suspendable_state.rs  traits.rs
crypto/core/tests/: key_material_tests.rs
crypto/factory/: Cargo.toml
crypto/factory/src/: hash_factory.rs  kdf_factory.rs  lib.rs  mac_factory.rs  rng_factory.rs  xof_factory.rs
crypto/factory/tests/: hash_factory_tests.rs  kdf_factory_tests.rs
crypto/hex/: Cargo.toml
crypto/hex/src/: lib.rs
crypto/hkdf/: Cargo.toml
crypto/hkdf/benches/: hkdf_benches.rs
crypto/hkdf/src/: lib.rs
crypto/hkdf/tests/: hkdf_tests.rs
crypto/hmac/: Cargo.toml
crypto/hmac/src/: lib.rs
crypto/hmac/tests/: hmac_tests.rs
crypto/mldsa-lowmemory/benches/: mldsa_benches.rs
crypto/mldsa-lowmemory/src/: aux_functions.rs  hash_mldsa.rs  lib.rs  low_memory_helpers.rs  mldsa.rs  mldsa_keys.rs  polynomial.rs
crypto/mldsa-lowmemory/tests/: bc_test_data.rs  hash_mldsa_tests.rs  mldsa_key_tests.rs  mldsa_tests.rs  wycheproof.rs
crypto/mldsa/benches/: mldsa_benches.rs
crypto/mldsa/src/: aux_functions.rs  hash_mldsa.rs  lib.rs  matrix.rs  mldsa.rs  mldsa_keys.rs  polynomial.rs
crypto/mldsa/tests/: bc_test_data.rs  hash_mldsa_tests.rs  mldsa_key_tests.rs  mldsa_tests.rs  wycheproof.rs
crypto/mlkem-lowmemory/benches/: mlkem_benches.rs
crypto/mlkem-lowmemory/src/: aux_functions.rs  lib.rs  low_memory_helpers.rs  mlkem.rs  mlkem_keys.rs  polynomial.rs
crypto/mlkem-lowmemory/tests/: bc_test_data.rs  mlkem_key_tests.rs  mlkem_tests.rs  wycheproof.rs
crypto/mlkem/benches/: mlkem_benches.rs
crypto/mlkem/src/: aux_functions.rs  lib.rs  matrix.rs  mlkem.rs  mlkem_keys.rs  polynomial.rs
crypto/mlkem/tests/: bc_test_data.rs  mlkem_key_tests.rs  mlkem_tests.rs  wycheproof.rs
crypto/rng/: Cargo.toml
crypto/rng/benches/: hash_drbg_benches.rs
crypto/rng/src/: hash_drbg80090a.rs  lib.rs
crypto/rng/tests/: hash_drbg80090a_tests.rs
crypto/sha2/: Cargo.toml
crypto/sha2/src/: lib.rs  sha256.rs  sha512.rs
crypto/sha2/tests/: sha2_tests.rs
crypto/sha3/: Cargo.toml
crypto/sha3/src/: keccak.rs  lib.rs  sha3.rs  shake.rs
crypto/sha3/tests/: sha3_tests.rs  shake_tests.rs
crypto/utils/: Cargo.toml
crypto/utils/src/: ct.rs  lib.rs  secret.rs
crypto/utils/tests/: test_secret.rs  test_utils.rs
mem_usage_benches/: bench_mldsa_mem_usage.rs  bench_mlkem_mem_usage.rs
src/: bench_mldsa_mem_usage.rs
