[workspace]
members = ["cli", "crypto/*", "mem_usage_benches"]

[workspace.package]
edition = "2024"

[workspace.dependencies]

# *** Internal Dependencies ***
bouncycastle = { path = "./", version = "0.1.2" }
bouncycastle-base64 = { path = "./crypto/base64", version = "0.1.2" }
bouncycastle-core = { path = "crypto/core", version = "0.1.2" }
bouncycastle-core-test-framework = { path = "./crypto/core-test-framework", version = "0.1.2" }
bouncycastle-factory = { path = "./crypto/factory", version = "0.1.2" }
bouncycastle-hex = { path = "./crypto/hex", version = "0.1.2" }
bouncycastle-hkdf = { path = "./crypto/hkdf", version = "0.1.2" }
bouncycastle-hmac = { path = "./crypto/hmac", version = "0.1.2" }
bouncycastle-mlkem = { path = "./crypto/mlkem", version = "0.1.2" }
bouncycastle-mlkem-lowmemory = { path = "./crypto/mlkem-lowmemory", version = "0.1.2" }
bouncycastle-mldsa = { path = "./crypto/mldsa", version = "0.1.2" }
bouncycastle-mldsa-lowmemory = { path = "./crypto/mldsa-lowmemory", version = "0.1.2" }
bouncycastle-rng = { path = "./crypto/rng", version = "0.1.2" }
bouncycastle-sha2 = { path = "./crypto/sha2", version = "0.1.2" }
bouncycastle-sha3 = { path = "./crypto/sha3", version = "0.1.2" }
bouncycastle-utils = { path = "./crypto/utils", version = "0.1.2" }


# *** External Dependencies ***
criterion = "0.8.2" # only for benchmarking, not used in lib or cli build

[profile.release]
lto = "thin"
strip = "debuginfo"


# libbouncycastle
[package]
name = "bouncycastle"
version = "0.1.2"
edition.workspace = true

[dependencies]
bouncycastle-base64.workspace = true
bouncycastle-core.workspace = true
bouncycastle-factory.workspace = true
bouncycastle-hex.workspace = true
bouncycastle-hkdf.workspace = true
bouncycastle-hmac.workspace = true
bouncycastle-mldsa.workspace = true
bouncycastle-mldsa-lowmemory.workspace = true
bouncycastle-mlkem.workspace = true
bouncycastle-mlkem-lowmemory.workspace = true
bouncycastle-rng.workspace = true
bouncycastle-sha2.workspace = true
bouncycastle-sha3.workspace = true