[package]
name = "bouncycastle-factory"
version = "0.1.2"
edition.workspace = true

[dependencies]
bouncycastle-core.workspace = true
bouncycastle-hkdf.workspace = true
bouncycastle-hmac.workspace = true
bouncycastle-sha2.workspace = true
bouncycastle-sha3.workspace = true
bouncycastle-rng.workspace = true

[dev-dependencies]
bouncycastle-core-test-framework.workspace = true
bouncycastle-utils.workspace = true
bouncycastle-hex.workspace = true
