[package]
name = "bouncycastle-hkdf"
version = "0.1.2"
edition.workspace = true

[dependencies]
bouncycastle-core.workspace = true
bouncycastle-hmac.workspace = true
bouncycastle-sha2.workspace = true
bouncycastle-utils.workspace = true

[dev-dependencies]
bouncycastle-core-test-framework.workspace = true
criterion.workspace = true
bouncycastle-rng.workspace = true
bouncycastle-hex.workspace = true

[[bench]]
name = "hkdf_benches"
harness = false