[package]
name = "bouncycastle-hmac"
version = "0.1.2"
edition.workspace = true

[dependencies]
bouncycastle-core.workspace = true
bouncycastle-rng.workspace = true
bouncycastle-sha2.workspace = true
bouncycastle-sha3.workspace = true
bouncycastle-utils.workspace = true

[dev-dependencies]
bouncycastle-core-test-framework.workspace = true
criterion.workspace = true
bouncycastle-hex.workspace = true

[[bench]]
name = "hmac_benches"
harness = false
