[package]
name = "bouncycastle-rng"
version = "0.1.2"
edition.workspace = true

[dependencies]
bouncycastle-core.workspace = true
bouncycastle-sha2.workspace = true
bouncycastle-utils.workspace = true

# external
getrandom = "0.4.0-rc.1"

[dev-dependencies]
bouncycastle-core-test-framework.workspace = true
criterion.workspace = true

[[bench]]
name = "hash_drbg_benches"
harness = false