[package]
name = "bouncycastle-sha2"
version = "0.1.1"
edition.workspace = true

[dependencies]
bouncycastle-core.workspace = true
bouncycastle-utils.workspace = true

[dev-dependencies]
criterion.workspace = true
bouncycastle-core-test-framework.workspace = true
bouncycastle-rng.workspace = true

[[bench]]
name = "sha2_benches"
harness = false
