[package]
name = "bouncycastle-sha3"
version = "0.1.2"
edition.workspace = true

[dependencies]
bouncycastle-core.workspace = true
bouncycastle-utils.workspace = true

[dev-dependencies]
bouncycastle-core-test-framework.workspace = true
criterion.workspace = true
bouncycastle-hex.workspace = true
bouncycastle-rng.workspace = true

[[bench]]
name = "sha3_benches"
harness = false
